2nd attempt to update project to version 1.1

--- a/coc8640b4ab7ea074c56f6bdc/manifest.json
+++ b/coc8640b4ab7ea074c56f6bdc/manifest.json
@@ -1,7 +1,6 @@
 {
     "manifest_version": 3,
-    "version": "1.0",
-    "name": "Leads tracker",
+    "version": "1.1", 
     "action": {
         "default_popup": "index.html",
         "default_icon": "icon.png"
@@ -10,3 +9,9 @@
         "tabs"
     ]
 }
+/*Program made by Scrimba's project instructions given by instructor 'Per Harald Borgen' that were coded up by me, with further added functionalities devised and programed by me, 'Luis Uribe Zambrano' 
+that consist of: allowing you to copy all links into text that formats each new link in a new line break, gives you the ability to only copy one link from your visible list at a time if needed, added copy clipboard icons,
+gave each button different colors for further differentation, and did further css work to add a bit more visual and UX support for the chrome extension.
+"name": "Leads tracker",
+Since I made edits, we can consider this version of "Leads tracker" to be 'version 1.1'.
+*/
