--- a/coc8640b4ab7ea074c56f6bdc/manifest.json
+++ b/coc8640b4ab7ea074c56f6bdc/manifest.json
@@ -1,5 +1,6 @@
 {
     "manifest_version": 3,
+    "name": "Leads tracker",
     "version": "1.1", 
     "action": {
         "default_popup": "index.html",
